--- a/Frontend/Admin/ShiftAddOrUpdate.html
+++ b/Frontend/Admin/ShiftAddOrUpdate.html
@@ -410,7 +410,7 @@
                         </td>
                       </tr>
 
-                      <tr class="row">
+                      <!-- <tr class="row">
                         <td
                           class="col-md-3"
                           style="text-align: right !important"
@@ -433,7 +433,7 @@
                             />
                           </div>
                         </td>
-                      </tr>
+                      </tr> -->
 
                       <tr class="row">
                         <td
@@ -870,7 +870,7 @@
         document.getElementById("Shift").value = params.get("shift_time") || "";
         document.getElementById("IsFullDay").value =
           params.get("is_full_day_shift") || "";
-        document.getElementById("Amount").value = params.get("amount") || "";
+        // document.getElementById("Amount").value = params.get("amount") || "";
         document.getElementById("Id").value = params.get("id") || "";
         //
       });
