--- a/Frontend/Admin/StudentAddOrUpdate.html
+++ b/Frontend/Admin/StudentAddOrUpdate.html
@@ -961,8 +961,8 @@
           params.get("mobile_number") || "";
         document.getElementById("AadharCardNo").value =
           params.get("aadhar_number") || "";
-        document.getElementById("ProfilePhoto").value =
-          params.get("profile_photo") || "";
+        // document.getElementById("ProfilePhoto").value =
+        //   params.get("profile_photo") || "";
         document.getElementById("Id").value = params.get("id") || "";
         //
       });
