--- a/Frontend/Admin/Students.html
+++ b/Frontend/Admin/Students.html
@@ -482,7 +482,7 @@
                             console.log(Student);
 
                             // Create a query string with Student data
-                            const queryString = `?id=${id}&student_name=${Student[0].student_name}&father_name=${Student[0].father_name}&profile_photo=${Student[0].profile_photo}&gender=${Student[0].gender}&address=${Student[0].address}&mobile_number=${Student[0].mobile_number}&aadhar_number=${Student[0].aadhar_number}&status=${Student[0].status}`;
+                            const queryString = `?id=${id}&student_name=${Student[0].student_name}&father_name=${Student[0].father_name}&gender=${Student[0].gender}&address=${Student[0].address}&mobile_number=${Student[0].mobile_number}&aadhar_number=${Student[0].aadhar_number}&status=${Student[0].status}`;
                             console.log(queryString);
 
                             // Redirect to the edit page with the query string
